--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
 
 <header>
-  <h1>چگونه با نمایندگان کنگره آمریکا تماس بگیریم</h1>
+  <h1> چگونه با نمایندگان کنگره آمریکا تماس بگیریم و درخواست کمک برای حمایت از معترضان وانقلاب ایرانیان کنیم  </h1>
   <p>راهنمای ساده و مرحله‌به‌مرحله برای شهروندان و ساکنان آمریکا</p>
 </header>
 
